--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
           RAILS_ENV: test
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: bundle exec appraisal rails-7 rake app:test
+        run: bin/rails app:test
 
   test_rails_8:
     name: "Tests (Rails 8)"
@@ -72,4 +72,4 @@ jobs:
           RAILS_ENV: test
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: bundle exec appraisal rails-8 rake app:test
+        run: bin/rails app:test
