Correct the storage config
it omitted the mirror name previously

--- a/test/dummy/config/storage.yml
+++ b/test/dummy/config/storage.yml
@@ -14,6 +14,7 @@ encrypted_disk:
   private_url_policy: stream
 
 encrypted_mirror:
+  service: EncryptedMirror
   primary:
     service: EncryptedDisk
     root: <%= Rails.root.join("storage") %>
