Tweak the config a bit

--- a/test/dummy/config/storage.yml
+++ b/test/dummy/config/storage.yml
@@ -16,7 +16,6 @@ encrypted_disk:
 encrypted_mirror:
   service: EncryptedMirror
   primary:
-    service: EncryptedDisk
-    root: <%= Rails.root.join("storage") %>
-    private_url_policy: stream
-  mirrors: []
+    - encrypted_disk
+  mirrors:
+    - test
